fix: apply VulnScout security fixes